syntax="proto3";

option go_package = "github.com/chenmuyao/go-bootcamp/grpc_learn";


message User {
  int64 id = 1;
  string name = 2;

  // can be discontinued
  string avatar = 4;
  // id is unique, cannot redistribute

  map<string, string> attributes = 5;
  repeated string nicknames = 6;

  optional int32 age = 7;

  Address address = 8;

  oneof contacts {
    string email = 9;
    string phone = 10;
  }

  Gender gender = 11;
}

message Address {
  string province = 1;
  string city = 2;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}

service UserService {
  rpc GetByID(GetByIDRequest) returns(GetByIDResponse);
}

message GetByIDRequest {
  int64 id = 1;
}

message GetByIDResponse {
  User user = 1;
}
